--- a/style.css
+++ b/style.css
@@ -152,16 +152,21 @@ input, select {
 		background-image: url(img/Tree.png);
 		background-size: 100%;
 		margin: 0px auto;
-		border-top-style: solid;
-		border-width: 3px;
+		border-width: 4px;
 		border-color: #ebe4d3;
+		border-top-style: solid;
+		border-left-style: solid;
+		border-right-style: solid;
 	}
 	.header {
 		width: 1000px;
 		height: 50px;
 		margin: 0 auto;
 		background-color: white;
-		border-width: 3px;
+		border-width: 4px;
+		border-top-style: solid;
+		border-left-style: solid;
+		border-right-style: solid;
 		border-color: #ebe4d3;
 	}
 	.img-NCSU {
@@ -199,9 +204,26 @@ input, select {
 		height: 100%;
 		width: 1000px;
 		background-color: white;
-		border-top-style: solid;
-		border-width: 3px;
+		border-width: 4px;
 		border-color: #ebe4d3;
+		border-top-style: solid;
+		border-left-style: solid;
+		border-right-style: solid;
+		/* to make bubble boxes */
+		/* border-radius: 2px; */
+	}
+	
+	.midbox2{
+		margin: 0px auto;
+		height: 100%;
+		width: 1000px;
+		background-color: white;
+		border-width: 4px;
+		border-color: #ebe4d3;
+		border-top-style: solid;
+		border-left-style: solid;
+		border-right-style: solid;
+		border-bottom-style: solid;
 		/* to make bubble boxes */
 		/* border-radius: 2px; */
 	}
