--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ input, select {
 		font-size: 24px;
 		text-align: left;
 		text-decoration: none;
-		color: #90AFC5;
+		color: #769cb7;
 	}
 
 	p {
