--- a/style.css
+++ b/style.css
@@ -186,10 +186,10 @@ input, select {
 		border-color: #ebe4d3;
 	}
 	
-	.img-trees {
+	.img-data-analysis {
 		width: 1000px;
 		height: 300px;
-		background-image: url(img/ForestryOnline.jpg);
+		background-image: url(img/DataAnalysis.jpg);
 		background-size: 100%;
 		margin: 0px auto;
 		border-width: 6px;
