--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ input, select {
 	.img-data-analysis {
 		width: 1000px;
 		height: 300px;
-		background-image: url(img/DataAnalysis.jpg);
+		background-image: url(img/DataAnalysis.png);
 		background-size: 100%;
 		margin: 0px auto;
 		border-width: 6px;
