--- a/style.css
+++ b/style.css
@@ -199,6 +199,19 @@ input, select {
 		border-right-style: solid;
 	}
 
+	.img-graduation-headshot {
+		width: 150px;
+		height: 180px;
+		background-image: url(img/GraduationHeadShot.png);
+		background-size: 100%;
+		margin-right: 20px;
+		border-width: 6px;
+		border-color: #ebe4d3;
+		border-top-style: solid;
+		border-left-style: solid;
+		border-right-style: solid;
+	}
+
 /* FRONT PAGE */
 	.combine {
 		margin: 0px auto 0px;
