--- a/style.css
+++ b/style.css
@@ -202,15 +202,19 @@ input, select {
 	.img-graduation-headshot {
 		width: 150px;
 		height: 180px;
-		background-image: url(img/GraduationHeadShot.png);
-		background-size: 100%;
+		background-image: url('img/GraduationHeadShot.png');
+		background-size: cover;
+		background-position: center;
+		float: left;
 		margin-right: 20px;
+		margin-bottom: 10px;
 		border-width: 6px;
 		border-color: #ebe4d3;
 		border-top-style: solid;
 		border-left-style: solid;
 		border-right-style: solid;
 	}
+
 
 /* FRONT PAGE */
 	.combine {
