--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ input, select {
 	.img-graduation-headshot {
 		width: 150px;
 		height: 180px;
-		background-image: url(img/DataAnalysis.png);
+		background-image: url(img/GraduationHeadshot.jpg);
 		background-size: 100%;
 		margin: 0px auto;
 		border-width: 6px;
