--- a/style.css
+++ b/style.css
@@ -200,11 +200,12 @@ input, select {
 	}
 
 	.img-graduation-headshot {
-		width: 150px;
-		height: 180px;
+		width: 180px;
+		height: 211px;
 		background-image: url(img/GraduationHeadshot.jpg);
 		background-size: 100%;
 		margin: 0px auto;
+		margin-left: 30px;
 		float: right;
 		border-width: 0px;
 		border-color: #ebe4d3;
