--- a/style.css
+++ b/style.css
@@ -295,6 +295,12 @@ input, select {
 		margin: 10px 50px 5px 50px;
 	}
 
+	.margins4 {
+		font-size: 16px;
+		line-height: 20px;
+		margin: 10px 50px 5px 70px;
+	}
+
 	body {
 		background-color: #2A3132;
 	}
