Change header 2 color to dark blue

--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ input, select {
 		font-style: normal;
 		text-align: left;
 		text-decoration: none;
-		color: #4CAF50;
+		color: #1F3A93;
 	}
 
 	p {
