--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ time, mark, audio, video {
     background:transparent;
 }
 
+div {
+    padding-bottom: 20px;
+}
+
 body {
     line-height:1;
 }
