--- a/style.css
+++ b/style.css
@@ -345,6 +345,7 @@ input[type=submit]:hover {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
+    padding-bottom: 40px;
     margin: 10px;
 }
 
