Update header color to blue

--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ input, select {
 		margin: 0px auto 0px;
 		height: 30px;
 		width: 1000px;
-		background-color: white;
+		background-color: #161356;
 	}
 	
 	.midbox{
