Update header color

--- a/style.css
+++ b/style.css
@@ -222,14 +222,14 @@ input, select {
 		margin: 0px auto 0px;
 		height: 30px;
 		width: 1000px;
-		background-color: ##7f9097;
+		background-color: #7f9097;
 	}
 	
 	.midbox{
 		margin: 0px auto;
 		height: 100%;
 		width: 1000px;
-		background-color: ##7f9097;
+		background-color: #7f9097;
 		border-width: 6px;
 		border-color: #ebe4d3;
 		border-top-style: solid;
