Revert to previous tab color

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ input, select {
     	border-color: rgb(248, 251, 225);
 		height: 100%;
 		width: 1000px;
-		background-color: #7f9097;
+		background-color: #ddd;
 		
 	}
 	
